# nadino-network-engine

./: .clang-format-ignore  .gitignore  .gitmodules  Makefile  README.md  justfile  meson.build  run.sh
cfg/: ae_multi_tenant_dpu_two_node.cfg  ae_online-boutique-palladium-dpu.cfg  ae_simple_dpu.cfg  example.cfg  example_cloudlab.cfg  example_multi_node.cfg  example_mutli_node.cfg  motion-detection.cfg  multi-tenancy-expt.json  my-palladium-cpu.cfg  my-palladium-dpu.cfg  online-boutique-concurrency-32.cfg  online-boutique-multi-nodes-one-side-cloudlab.cfg  online-boutique-multi-nodes-one-side.cfg  online-boutique-multi-nodes-two-side.cfg  online-boutique-multi-nodes.cfg  online-boutique-one-node.cfg  online-boutique-palladium-dpu.cfg  online-boutique-palladium-host.cfg  online-boutique-spright.cfg  online_boutique.cfg  parking.cfg  simple-one-node-DPU.cfg  simple-one-node.cfg  simple-two-nodes-palladium-dpu.cfg  simple-two-nodes-palladium-host.cfg  simple-two-nodes.cfg  simple.cfg  simple_dpu_two_node.cfg  simple_multi_tenant-one-node.cfg  simple_multi_tenant-two-node.cfg  simple_multi_tenant.cfg  simple_multi_tenant_dpu_two_node.cfg  simple_one_node_dpu.cfg  simple_six_tenant_dpu_two_node.cfg  simple_two_node_dpu.cfg  six-tenant-expt.json  test.cfg
docs/: 01-create-cluster-on-cloudlab.md  02-install-deps.md  02-upgrade-kernel-install-deps.md  BlueField2-DPU-Setup-Guide.md  TROUBLESHOOTING.md  USAGE.md  change-cfg-file.md  install-RDMA-driver.md  install-dependencies.md
ebpf/: sk_msg_kern.c
go/: nf.go
microbench/tcp/: server.c  tcp_bench.c
python/: gateway.py  nf.py  shm_mgr.py
scripts/: average_latency.py  conda_setup.sh  edit_cfg_cloudlab_hostname.py  fuyao_one_side.sh  nf_client_cmder.py  spright.sh  tmux_dne_host1.sh  tmux_dne_host2.sh
scripts/microbench/: pipe_latency_multithreads.c  pipe_latency_singlethread.c
sigcomm-experiment/: memory_copy.cpp
sigcomm-experiment/env-setup/: 001-env_setup_master.sh  002-env_setup_master.sh
sigcomm-experiment/expt-DPU-channel/: DPU_channel.py  README.md  cmd_gen.py  cmd_gen_send.py  comch_ctrl_path_common.c  comch_ctrl_path_common.h  comch_utils.c  common.c  common.h  meson.build  sc_params.json  secure_channel.c  secure_channel_core.c  secure_channel_core.h  utils.c
sigcomm-experiment/expt-DPU-channel-scalability/: README.md  comch_sr_client.cpp  comch_sr_server.cpp  rdma_client.cpp  rdma_host_export.cpp  rdma_server.cpp
sigcomm-experiment/expt-DPU-channel-scalability/tcp/: client.c
sigcomm-experiment/expt-DPU-channel/comch_ctrl_path_client/: comch_ctrl_path_client_main.c  comch_ctrl_path_client_sample.c  meson.build
sigcomm-experiment/expt-DPU-channel/comch_ctrl_path_server/: comch_ctrl_path_server_main.c  comch_ctrl_path_server_sample.c  meson.build
sigcomm-experiment/expt-DPU-host-latency/: README.md  TCP_latency.py  comch_produce_consume_cmd_gen.py  comch_send_recv_cmd_gen.py  latency_monitor.py  rdma_interrupt_cmd_gen.py  rdma_interrupt_lat.c  socket.py
sigcomm-experiment/expt-DPU-host-latency/DPU-channel/: README.md  comch_ctrl_path_common.c  comch_ctrl_path_common.h  common.c  meson.build  secure_channel.c  secure_channel_core.c  secure_channel_core.h
sigcomm-experiment/expt-DPU-host-latency/DPU-channel/comch_ctrl_path_client/: comch_ctrl_path_client_main.c  comch_ctrl_path_client_sample.c
sigcomm-experiment/expt-DPU-host-latency/DPU-channel/comch_ctrl_path_server/: comch_ctrl_path_server_main.c  comch_ctrl_path_server_sample.c
sigcomm-experiment/expt-DPU-rdma/: dma_copy.c  dma_copy_core.c  dma_copy_core.h  meson.build  pack.c  pack.h  ping_pong_DPU.c  ping_pong_DPU.h
sigcomm-experiment/expt-primitive-cmp/: README.md  cmd_gen.py  cmp.py
sigcomm-experiment/expt-scalability/: README.md  exp1.py
sigcomm-experiment/expt-sharing/: QP_sharing.c  README.md
src/: RDMA_utils.c  adservice.c  bitmap.c  cartservice.c  checkoutservice.c  common.c  control_server.c  currencyservice.c  doca_ctx.cpp  emailservice.c  frontendservice.c  gateway.c  gateway.cpp  io_helper.c  io_rte_ring.c  io_sk_msg.c  nf.c  nf.cpp  palladium_doca_common.cpp  palladium_nf_common.cpp  paymentservice.c  productcatalogservice.c  recommendationservice.c  shippingservice.c  shm_mgr.c  shm_mgr.cpp  shm_rpc.c  sock_utils.c  sockmap_manager.c  timer.c  utility.c
src/cstl/: meson.build
src/cstl/inc/: c_deque.h  c_lib.h
src/cstl/src/: c_array.c
src/include/: RDMA_utils.h  bitmap.h  common.h  control_server.h  doca_ctx.h  http.h  io.h  palladium_doca_common.h  palladium_nf_common.h  shm_rpc.h  sock_utils.h  spright.h  timer.h  utility.h
src/log/: log.c  log.h
src/online_boutique/: adservice.c  adservice.cpp  cartservice.c  cartservice.cpp  checkoutservice.c  checkoutservice.cpp  currencyservice.c  currencyservice.cpp  emailservice.c  emailservice.cpp  frontendservice.c  frontendservice.cpp  paymentservice.c  paymentservice.cpp  productcatalogservice.c  productcatalogservice.cpp  recommendationservice.c  recommendationservice.cpp  shippingservice.c  shippingservice.cpp
test/: json.cpp  test_skt.cpp
